# rev_analyzer

./: Dockerfile  README.md  TODO.md  docker-compose.yml  mongo-init.js  pyproject.toml  requirements.txt
.zed/: tasks.json
src/: main.py
src/app/: app.py  endpoints.py  models.py  requests.py
src/services/: classify.py  db.py  telemetry.py
src/services/models/: domain_model.py  llm.py
